[tool.poetry]
name = "utunes"
version = "0"
description = "Microscopic music library manager and music player"
authors = ["Radian LLC <contact+utunes@radian.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
atomicwrites = "^1.3"
mutagen = "^1.42"
portalocker = "^1.4"
python-mpv = "^0.3.9"
psutil = "^5.6"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
utunes = 'utunes:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
