[tool.poetry]
name = "utunes"
version = "0"
description = "Microscopic music library manager and music player"
authors = ["Radian LLC <contact+utunes@radian.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
atomicwrites = "^1.4.1"
mutagen = "^1.47.0"
portalocker = "^2.8.2"
python-mpv = "^1.0.6"
psutil = "^5.9.8"

[tool.poetry.scripts]
utunes = 'utunes:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
